# template_pytorch

./: .gitignore  CMakeLists.txt  Makefile  README.md  check_torch.py  hello_mpi.cpp  torch_quickstart_tutorial.py  vector_add.cu
.devcontainer/: Dockerfile  devcontainer.json
